--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "autoprefixer": "^10.4.7",
+    "bulma": "^0.9.4",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
