--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@vee-validate/rules": "^4.5.11",
     "core-js": "^3.19.3",
+    "localforage": "^1.10.0",
     "nuxt": "^2.15.8",
     "nuxt-buefy": "^0.4.13",
     "vee-validate": "^2.2.15",
